@@ -151,7 +151,7 @@ void service_ncp(char *ip, int sp, unsigned char options, char *miscptr, FILE * 
       sock = hydra_connect_tcp(ip, myport);
       port = myport;
       if (sock < 0) {
-        fprintf(stderr, "[ERROR] Child with pid %d terminating, can not connect\n", (int) getpid());
+        if (quiet != 1) fprintf(stderr, "[ERROR] Child with pid %d terminating, can not connect\n", (int) getpid());
         hydra_child_exit(1);
       }
       next_run = 2;
