@@ -161,7 +161,7 @@ void service_pcnfs(char *ip, int sp, unsigned char options, char *miscptr, FILE 
           sock = hydra_disconnect(sock);
 //        usleep(275000);
         if ((sock = hydra_connect_udp(ip, port)) < 0) {
-          fprintf(stderr, "[ERROR] Child with pid %d terminating, can not connect\n", (int) getpid());
+          if (quiet != 1) fprintf(stderr, "[ERROR] Child with pid %d terminating, can not connect\n", (int) getpid());
           hydra_child_exit(1);
         }
         next_run = 2;
